--- a/F767_RTOS_LWIP/MDK-ARM/F767_ETH0711.uvprojx
+++ b/F767_RTOS_LWIP/MDK-ARM/F767_ETH0711.uvprojx
@@ -16,8 +16,8 @@
         <TargetCommonOption>
           <Device>STM32F767ZITx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F7xx_DFP.2.12.0</PackID>
-          <PackURL>https://www.keil.com/pack/</PackURL>
+          <PackID>STMicroelectronics.STM32F7xx_DFP.1.0.3</PackID>
+          <PackURL>http://www.ST.com/</PackURL>
           <Cpu>IRAM(0x20000000-0x2007FFFF) IROM(0x8000000-0x81FFFFF)   CLOCK(12000000) FPU3(DFPU) CPUTYPE("Cortex-M7") ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
